<resources>
    <string name="app_name">Fontfolio</string>

    <!-- login activity -->
    <string name="login_message">Login with a different account</string>
    <string name="privacy_policy_text">By continuing, you agree to fontfolio\'s <b>Terms of Service</b> and\n acknowleage you\'ve read our <b>Privacy Policy</b></string>
    <string name="login_welcom_text"><b>Welcome :)</b>\nEnter your E-mail and password.</string>
    <string name="email">E-mail</string>
    <string name="please_email_input_box_hint">Please enter your email</string>
    <string name="email_input_box_hint">Enter your email</string>
    <string name="pw">Password</string>
    <string name="please_pw_input_box_hint">Please enter your password</string>
    <string name="pw_input_box_hint">Enter your password</string>

    <!-- login bottom sheet -->
    <string name="sent_title">Sent you password\nreset email.</string>
    <string name="sent_email_text">We sent an email to @\nPlease check your email to reset your password.</string>
    <string name="resend_email">Resend email</string>
    <string name="got_it">Got it</string>

    <!-- loading -->
    <string name="loading_title">Fontfolio All Set!</string>
    <string name="loading_content">Hold tight while we customize\nyour home feed...</string>

    <!-- select font style -->
    <string name="welcome_fontfolio">Welcome to Fontfolio</string>
    <string name="select_style_content">Pick 4 or more font styles.</string>

    <!-- main -->
    <string name="content1">The secret of a good life is to have the right loyalties and hold them in the right scale of values.</string>
    <string name="content2">Almost before we knew it, we had left the ground.</string>

    <!-- Home-->
    <string name="font_item_content">Almost before we knew it, we had left the ground.</string>
    <string name="font_item_content2">The secret of a good life is to have the right loyalties and hold them in the right scale of values.</string>

    <string name="sort_by">Sort by</string>
    <string name="sort_by_recommended">Font Ranking TOP 100</string>
    <string name="sort_by_open_font">View by Open Font License</string>
    <string name="sort_by_paid_font">View by Commercial Paid Fonts</string>
    <string name="sort_by_all_font">View by All Fonts</string>
    <string name="organize_profile">Organize profile</string>
    <string name="reorder_boards">Reorder Boards</string>
    <string name="reorder_boards_content">Drag and drop to reorder boards. it will save as your custom sort by setting</string>
    <string name="close">close</string>


    <!-- save board -->
    <string name="save_to_board">Save to board</string>
    <string name="your_board">Your board</string>


    <!--  create board  -->
    <string name="create_board">Create board</string>

    <string name="font_name">Font name</string>
    <string name="board_name">Board name</string>
    <string name="board_image">Board image</string>

    <string name="organize_privacy">Organize Privacy</string>
    <string name="board_secret_check">Make this board secret</string>
    <string name="board_secret_check_content">Only you will see board.\nUnlock to share your board with others.</string>


    <!-- activity_join.xml -->
    <string name="sign_up_btn"><u>Si</u>g<u>n u</u><u>p</u></string>
    <string name="welcome_text">Welcome to <b>Fontfolio</b></string>
    <string name="welcome_text_3">The start where you can experience\nall the fonts in the world!</string>

    <!-- activity_sign_up.xml -->
    <string name="sign_up_next_btn">Next</string>

    <string name="ocr_title_description_text"><b>Fontfolio</b> provides results in the order of highest similarity through data analysis using artificial intelligence on font images presented by users.</string>
</resources>