<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:behavior_draggable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

    </androidx.constraintlayout.widget.Guideline>


    <TextView
        android:id="@+id/sent_email_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.05"
        />

    <TextView
        android:id="@+id/sort_by_recommended"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:text="@string/sort_by_recommended"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sent_email_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintHeight_percent="0.06" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recommeded_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:background="@drawable/home_main_bts_list_item_check"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_check_btn"
        app:layout_constraintTop_toBottomOf="@+id/sent_email_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintWidth_percent="0.06"
        app:layout_constraintHeight_percent="0.04"></androidx.appcompat.widget.AppCompatButton>


    <TextView
        android:id="@+id/sort_by_open_font"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:text="@string/sort_by_open_font"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_recommended"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintHeight_percent="0.06" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/random_check"
        android:background="@drawable/home_main_bts_list_item_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_check_btn"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_recommended"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintWidth_percent="0.06"
        app:layout_constraintHeight_percent="0.04"></androidx.appcompat.widget.AppCompatButton>


    <TextView
        android:id="@+id/sort_by_paid_font"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:text="@string/sort_by_paid_font"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_open_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintHeight_percent="0.06" />





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popularity_check"
        android:background="@drawable/home_main_bts_list_item_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_check_btn"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_open_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintWidth_percent="0.06"
        app:layout_constraintHeight_percent="0.04"></androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/sort_by_all_font"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:text="@string/sort_by_all_font"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_paid_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.93"
        app:layout_constraintHeight_percent="0.06" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all_font_check"
        android:background="@drawable/home_main_bts_list_item_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_check_btn"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_paid_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintWidth_percent="0.06"
        app:layout_constraintHeight_percent="0.04"></androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/home_main_bts_divider_red"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_all_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:layout_constraintWidth_percent="0.01"
        app:layout_constraintHeight_percent="0.05"></ImageView>


    <TextView
        android:id="@+id/organize_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="14sp"
        android:text="@string/organize_profile"
        android:paddingLeft="6sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toRightOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_all_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintWidth_percent="0.51"
        app:layout_constraintHeight_percent="0.05" />






    <TextView
        android:id="@+id/reorder_boards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:text="@string/reorder_boards"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/organize_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.51"
        app:layout_constraintHeight_percent="0.05" />


    <TextView
        android:id="@+id/reorder_boards_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="14sp"
        android:text="@string/reorder_boards_content"
        android:textColor="#66000000"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/reorder_boards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_percent="0.1" />



    <LinearLayout
        android:id="@+id/close_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/xml_rounding_btn_default"
        android:backgroundTint="#0D000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reorder_boards_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="6sp"
            android:text="@string/close"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>








    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_check_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

    </androidx.constraintlayout.widget.Guideline>




</androidx.constraintlayout.widget.ConstraintLayout>