<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".board.CreateBoardActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/action_bar_close_btn"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintWidth_percent="0.11"
            app:layout_constraintHeight_percent="0.84"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/create_board"
            android:textColor="#D9000000"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"></TextView>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finish_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/action_bar_next_arrow_btn"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintWidth_percent="0.12"
            app:layout_constraintHeight_percent="0.84"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/font_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/font_name"
        android:textSize="14sp"
        android:textColor="#D9000000"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toBottomOf="@+id/actionbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"></TextView>


    <EditText
        android:id="@+id/font_name_input_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintWidth_percent="0.91"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/font_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"></EditText>


    <TextView
        android:id="@+id/board_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/board_name"
        android:textSize="14sp"
        android:textColor="#D9000000"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@+id/font_name_input_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"></TextView>


    <EditText
        android:id="@+id/board_name_input_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintWidth_percent="0.91"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintTop_toBottomOf="@+id/board_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        ></EditText>


    <TextView
        android:id="@+id/board_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/board_image"
        android:textSize="14sp"
        android:textColor="#D9000000"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@+id/board_name_input_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"></TextView>

    <ImageView
        android:id="@+id/take_picture_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/board_image_camera_btn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_image"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/get_picture_view"
        app:layout_constraintWidth_percent="0.155"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_chainStyle="spread_inside"></ImageView>


    <ImageView
        android:id="@+id/get_picture_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/board_image_gallery_btn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_image"
        app:layout_constraintLeft_toRightOf="@+id/take_picture_view"
        app:layout_constraintRight_toLeftOf="@+id/board_icon_view1"
        app:layout_constraintWidth_percent="0.155"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_chainStyle="spread"></ImageView>


    <com.corporation8793.fontfolio.CustomView
        android:id="@+id/board_icon_view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:selected="false"
        android:background="@drawable/board_image_heart_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_image"
        app:layout_constraintLeft_toRightOf="@+id/get_picture_view"
        app:layout_constraintRight_toLeftOf="@+id/board_icon_view2"
        app:layout_constraintWidth_percent="0.155"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_chainStyle="spread"></com.corporation8793.fontfolio.CustomView>

    <com.corporation8793.fontfolio.CustomView
        android:id="@+id/board_icon_view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:selected="false"
        android:background="@drawable/board_image_star_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_image"
        app:layout_constraintLeft_toRightOf="@+id/board_icon_view1"
        app:layout_constraintRight_toLeftOf="@+id/board_icon_view3"
        app:layout_constraintWidth_percent="0.155"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_chainStyle="spread"></com.corporation8793.fontfolio.CustomView>


    <com.corporation8793.fontfolio.CustomView
        android:id="@+id/board_icon_view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:selected="false"
        android:background="@drawable/board_image_folder_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_image"
        app:layout_constraintLeft_toRightOf="@+id/board_icon_view2"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintWidth_percent="0.155"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        ></com.corporation8793.fontfolio.CustomView>


    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/board_divider"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/take_picture_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.01"
        app:layout_constraintHeight_percent="0.025"></ImageView>


    <TextView
        android:id="@+id/organize_privacy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="14sp"
        android:text="@string/organize_privacy"
        android:paddingLeft="6sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toRightOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/take_picture_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintWidth_percent="0.51"
        app:layout_constraintHeight_percent="0.025" />






    <TextView
        android:id="@+id/board_secret_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="17sp"
        android:text="@string/board_secret_check"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/organize_privacy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.51"
        app:layout_constraintHeight_percent="0.05" />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.48"
        android:scaleY="0.53"
        android:track="@drawable/switch_track_selector"
        android:thumb="@drawable/setting_switch_btn"
        android:switchMinWidth="0dp" android:textOff="" android:textOn=""
        android:thumbTextPadding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/organize_privacy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintHeight_percent="0.035"></Switch>


    <TextView
        android:id="@+id/board_secret_check_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="14sp"
        android:text="@string/board_secret_check_content"
        android:textColor="#80000000"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/board_secret_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></androidx.constraintlayout.widget.Guideline>


</androidx.constraintlayout.widget.ConstraintLayout>